--- a/XSGen.tex
+++ b/XSGen.tex
@@ -127,10 +127,9 @@ The two cases being used to test XSGen in startup behavior will be a 3.1$\%$ enr
 \caption{A comparison of the output isotopics at equalibrium in the VISION fuel cycle simulator and the XSGen-Bright-lite system.}
 \label{tab:a}
 \vspace{0.5em}
-\hspace*{-5em}\begin{tabular}{|c| m{\mTW} m{\mTW} m{1cm}| m{\mTW} m{\mTW} m{1cm} | m{\mTW} m{\mTW} m{1cm} |}
+\hspace*{-5em}\begin{tabular}{ c m{\mTW} m{\mTW} m{1cm} m{\mTW} m{\mTW} m{1cm}  m{\mTW} m{\mTW} m{1cm} }
  & \multicolumn{3}{c}{3.0\%} & \multicolumn{3}{c}{3.5\%} & \multicolumn{3}{c}{4.0\%} \\
 Isotope & VISION & XSGen & Diff & VISION & XSGen & Diff & VISION & XSGen & Diff \\
-\hline
 U235 & 6.75E-3 & 6.70E-3 & -0.78 & 6.80E-3 & 6.71E-3 & -1.30 & 6.95E-3 & 6.91E-3 & -0.562 \\
 Pu238 & 1.23E-4 & 1.27E-4 & 3.01 & 1.85E-4 & 1.86E-4 & -0.41 & 2.52E-4 & 2.55E-4 & 1.35 \\
 Pu239 & 5.15E-3 & 5.25E-3 & 1.95 & 5.41E-3 & 5.45E-3 & 0.66 & 5.64E-3 & 5.67E-3 & 0.57 \\
@@ -140,8 +139,7 @@ Pu242 & 5.43E-4 & 5.48E-4 & 0.88 & 6.92E-4 & 6.93E-4 & 0.10 & 8.17E-4 & 8.19E-4 
 Am241 & 3.56E-5 & 3.86E-5 & 8.81 & 4.59E-5 & 5.17E-5 & 12.60 & 5.55E-5 & 6.04E-5 & 8.79 \\
 Am243 & 9.38E-5 & 9.01E-5 & -3.94 & 1.37E-4 & 1.26E-4 & -7.47 & 1.76E-4 & 1.74E-4 & -1.40 \\
 Cm242 & 1.38E-5 & 1.34E-5 & -3.19 & 1.88E-5 & 1.79E-5 & -4.91 & 2.33E-5 & 2.31E-5 & -0.83 \\
-Cm244 & 2.79E-5 & 2.57E-5 & -7.94 & 4.38E-5 & 4.54E-5 & -6.06 & 7.06E-5 & 7.00E-5 & -0.90 \\
-\hline
+Cm244 & 2.79E-5 & 2.57E-5 & -7.94 & 4.38E-5 & 4.54E-5 & -6.06 & 7.06E-5 & 7.00E-5 & -0.90 
 \end{tabular}
 \end{table}
 
@@ -153,6 +151,7 @@ Am241 shows the largest deviations from the VISION data. There is more Am241 in 
 \centering
 \caption{NEA core discharge data for a 3.1\% enriched light water reactor with startup behavior.}
 \label{tab:b}
+\vspace{0.5em}
 \begin{tabular}{lllll}
 Batch & Burnup (MWd/kg) & U235 (\%) & Fissile Pu (\%) & Total Pu(\%) \\
 1 & 12.04 & 0.64 & 0.464 & 0.633 \\
@@ -167,6 +166,7 @@ Equil. & 33.00 & 0.85 & 0.688 & 0.943
 \centering
 \caption{The startup values and percent difference from the NEA data for the XSGen/Bright-lite reactor system.}
 \label{tab:c}
+\vspace{0.5em}
 \begin{tabular}{lllllllll}
  & \multicolumn{2}{l}{Burnup (MWd/kgIHM)} & \multicolumn{2}{l}{U235 (\%)} & \multicolumn{2}{l}{Fissile Pu (\%)} & \multicolumn{2}{l}{Total Pu (\%)} \\
 Batch & Value & \%Diff & Value & \%Diff & Value & \%Diff & Value & \%Diff \\
@@ -187,6 +187,7 @@ The results of the start up isotopics can be seen in Table \ref{tab:c}. There ar
 \centering
 \caption{NEA data for a 3.6\% enriched light water reactor start up behavior.}
 \label{tab:d}
+\vspace{0.5em}
 \begin{tabular}{lllll}
 Batch & Burnup (MWd/kg) & U235 (\%) & Fissile Pu (\%) & Total Pu(\%) \\
 1 & 13.9 & 0.840 & 0.474 & 0.629 \\
@@ -203,6 +204,7 @@ Equil. & 42.50 & 0.81 & 0..827 & 1.223
 \centering
 \caption{XSGen / Bright-lite data for the 3.6\% enriched light water reactor start up behavior.}
 \label{tab:e}
+\vspace{0.5em}
 \begin{tabular}{lllllllll}
  & \multicolumn{2}{l}{Burnup (MWd/kgIHM)} & \multicolumn{2}{l}{U235 (\%)} & \multicolumn{2}{l}{Fissile Pu (\%)} & \multicolumn{2}{l}{Total Pu (\%)} \\
 Batch & Value & \%Diff & Value & \%Diff & Value & \%Diff & Value & \%Diff \\
@@ -225,6 +227,7 @@ Simply replicating the behavior of a light water reactor would not show off the 
 \centering
 \caption{Comparison of VISION and Bright-lite result from a single pass MOX reactor.}
 \label{tab:g}
+\vspace{0.5em}
 \begin{tabular}{llllll}
 Isotope & Input Composition & Vision & Bright-lite & Difference(\%) \\
 U234 & 2.20E-4 & 2.11E-4 & 2.00E-4 & -5.0\\
